Fix gaps beetween sections with margins

--- a/src/styles/5.layout/_section-wrapper.scss
+++ b/src/styles/5.layout/_section-wrapper.scss
@@ -3,9 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
-  margin: 0 auto;
-  padding-top: 70px;
-  padding-bottom: 120px;
+  margin: 70px auto 120px auto;
   
   &--bg-contact {
     position: relative;
